# pysolfc-tui

./: .gitignore  DECISIONS.md  DOGFOOD.md  LICENSE  Makefile  README.md  pyproject.toml  pysol.py
mockups/: large_card_ui.py  v2_gpt55.py  v3_image2.py
pysolfc_tui/: __init__.py  app.py  engine.py  music.py  render.py  rules.py  screens.py  sounds.py  tui.tcss
screenshots/: README.md  gameplay.tcell  hero.tcell
screenshots/candidates/: README.md
tests/: llm_play.py  perf.py  playtest.py  qa.py
